--- a/angular/projects/design/src/styles.scss
+++ b/angular/projects/design/src/styles.scss
@@ -37,7 +37,7 @@
 // @import "~bootstrap/scss/tooltip";
 // @import "~bootstrap/scss/popover";
 // @import "~bootstrap/scss/carousel";
-// @import "~bootstrap/scss/spinners";
+@import '~bootstrap/scss/spinners';
 // @import "~bootstrap/scss/offcanvas";
 // @import "~bootstrap/scss/placeholders";
 
@@ -53,3 +53,4 @@
 @import 'styles/icons';
 @import 'styles/forms';
 @import 'styles/links';
+@import 'styles/wizard';
