--- a/angular/projects/design/src/styles/_mixins.scss
+++ b/angular/projects/design/src/styles/_mixins.scss
@@ -1,3 +1,18 @@
+@mixin h2 {
+  @include font-size($h2-font-size);
+  line-height: 3rem;
+}
+
+@mixin h2-bold {
+  @include h2;
+  font-weight: $font-weight-semibold;
+}
+
+@mixin h3-semibold {
+  @include h3;
+  font-weight: $font-weight-semibold;
+}
+
 @mixin h3 {
   @include font-size($h3-font-size);
   line-height: 2rem;
