Dropdowns, state step in onboarding

--- a/angular/projects/design/src/app/inputs.component.html
+++ b/angular/projects/design/src/app/inputs.component.html
@@ -1,13 +1,37 @@
 <h1>Inputs</h1>
-<div class="mb-3">
-  <shared-text-field id="empty" name="empty" label="Empty Field" placeholder="Sample Input" [source]="source" [target]="source"></shared-text-field>
-</div>
-<div class="mb-3">
-  <shared-text-field id="disabled" name="disabled" label="Disabled Field" [isDisabled]="true" placeholder="Sample Input" [source]="source"></shared-text-field>
-</div>
-<div class="mb-3">
-  <shared-text-field id="readonly" name="readonly" label="Readonly Field" placeholder="Sample Input" [source]="source"></shared-text-field>
-</div>
-<div class="mb-3">
-  <shared-text-field id="invalid" name="invalid" label="Invalid Field" [error]="error" placeholder="Sample Input" [source]="source" [target]="source"></shared-text-field>
-</div>
+<section>
+  <h2>Text Fields</h2>
+  <div class="mb-3">
+    <shared-text-field id="empty" name="empty" label="Empty Field" placeholder="Sample Input" [source]="source" [target]="source"></shared-text-field>
+  </div>
+  <div class="mb-3">
+    <shared-text-field id="disabled" name="disabled" label="Disabled Field" [isDisabled]="true" placeholder="Sample Input" [source]="source"></shared-text-field>
+  </div>
+  <div class="mb-3">
+    <shared-text-field id="readonly" name="readonly" label="Readonly Field" placeholder="Sample Input" [source]="source"></shared-text-field>
+  </div>
+  <div class="mb-3">
+    <shared-text-field id="invalid" name="invalid" label="Invalid Field" [error]="error" placeholder="Sample Input" [source]="source" [target]="source"></shared-text-field>
+  </div>
+</section>
+<section>
+  <h2>Dropdowns</h2>
+  <div class="mb-3">
+    <shared-select-field id="dropdown" name="dropdown" label="Dropdown" [source]="source" [target]="source">
+      <option value="entry-1">Entry 1</option>
+      <option value="entry-2">Entry 2</option>
+      <option value="entry-3">Entry 3</option>
+      <option value="entry-4">Entry 4</option>
+      <option value="entry-5">Entry 5</option>
+    </shared-select-field>
+  </div>
+  <div class="mb-3">
+    <shared-select-field id="disabledDropdown" name="disabledDropdown" label="Disabled Dropdown" [isDisabled]="true" [source]="source" [target]="source">
+      <option value="entry-1">Entry 1</option>
+      <option value="entry-2">Entry 2</option>
+      <option value="entry-3">Entry 3</option>
+      <option value="entry-4">Entry 4</option>
+      <option value="entry-5">Entry 5</option>
+    </shared-select-field>
+  </div>
+</section>
