--- a/angular/projects/design/src/styles/_forms.scss
+++ b/angular/projects/design/src/styles/_forms.scss
@@ -2,6 +2,8 @@
   background-color: white;
   border: 2px solid $brand-primary-300;
   border-radius: 0.5rem;
+  display: flex;
+  flex-direction: column;
   position: relative;
 
   label {
@@ -10,12 +12,12 @@
     color: $base-500;
   }
 
-  input {
+  input,
+  select {
     @include h3-semibold;
     background-color: white;
     border: 0;
     color: $base-800;
-    flex-grow: 1;
     margin: 0 0.875rem 0.375rem;
     padding: 0;
     &::placeholder,
@@ -26,10 +28,19 @@
       outline: none;
     }
   }
+
+  select {
+    background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5 9L11.2929 15.2929C11.6834 15.6834 12.3166 15.6834 12.7071 15.2929L19 9' stroke='%232F4A56' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+    background-repeat: no-repeat;
+    background-position: right center;
+    appearance: none;
+  }
 }
 
-.form-field--disabled {
-  border-color: $base-500;
+@-moz-document url-prefix() {
+  .form-field select {
+    text-indent: -2px;
+  }
 }
 
 .form-field--editing {
@@ -55,6 +66,9 @@ fieldset:disabled .form-field {
   border-color: $base-500;
   &::after {
     display: none;
+  }
+  select {
+    background-image: none;
   }
 }
 
