--- a/angular/projects/shared/src/lib/components/fields/search-field.component.html
+++ b/angular/projects/shared/src/lib/components/fields/search-field.component.html
@@ -1,4 +1,4 @@
-<div class="form-field"
+<div class="form-field form-field--search"
   [class.form-field--disabled]="isDisabled"
   [class.form-field--editing]="isEditing"
   [class.form-field--focused]="isFocused"
@@ -6,13 +6,15 @@
   [class.form-field--nonempty]="isNonEmpty"
   [class.form-field--unconfirmed]="isUnconfirmed"
   (click)="onClick($event)">
-  <label [for]="derivedId">{{label}}</label>
-  <input #inputEl [type]="type" [id]="derivedId" [name]="derivedName"
+  <label *ngIf="label" [for]="derivedId">{{label}}</label>
+  <ng-template #rt let-r="result" let-t="term">{{r}}</ng-template>
+  <input #inputEl type="text" [id]="derivedId" [name]="derivedName"
     [placeholder]="placeholder"
     [disabled]="isDisabled"
     [readonly]="!isFocusable || !isEditing"
     [tabindex]="isFocusable && isEditing ? 0 : -1"
     (focus)="onFocus($event)" (blur)="onBlur($event)"
+    [ngbTypeahead]="ngbTypeahead" [inputFormatter]="inputFormatter" [resultTemplate]="resultTemplate ?? rt"
     [(ngModel)]="value" />
 </div>
 <div class="invalid-feedback" *ngIf="errorMessage as msg">{{msg}}</div>
