onboarding url screen

--- a/angular/projects/design/src/app/icons.component.html
+++ b/angular/projects/design/src/app/icons.component.html
@@ -1,7 +1,13 @@
 <h1>Icons</h1>
-<div>
-  <i class="pr-icon pr-icon-24-exit"></i>
-</div>
-<div>
-  <shared-loader></shared-loader>
-</div>
+<section>
+  <h2>Icon/24px</h2>
+  <div class="mb-3">
+    <i class="pr-icon pr-icon-24-chevron-down"></i> <i class="pr-icon pr-icon-24-exit"></i> <i class="pr-icon pr-icon-24-search"></i>
+  </div>
+</section>
+<section>
+  <h2>Loaders</h2>
+  <div class="mb-3">
+    <shared-loader></shared-loader>
+  </div>
+</section>
