--- a/angular/projects/design/src/app/inputs.component.html
+++ b/angular/projects/design/src/app/inputs.component.html
@@ -13,6 +13,9 @@
   <div class="mb-3">
     <shared-text-field id="invalid" label="Invalid Field" [error]="error" placeholder="Sample Input" [source]="source" [target]="source"></shared-text-field>
   </div>
+  <div class="mb-3">
+    <shared-text-field id="plaintext" label="Plaintext Field" placeholder="Sample Input" [isPlaintext]="true" [source]="source"></shared-text-field>
+  </div>
 </section>
 <section>
   <h2>Dropdowns</h2>
