--- a/angular/projects/design/src/styles/_forms.scss
+++ b/angular/projects/design/src/styles/_forms.scss
@@ -139,6 +139,17 @@ select:disabled {
   }
 }
 
+.form-field--plaintext {
+  border: none;
+  input {
+    margin: 0.5rem 0;
+  }
+
+  label {
+    margin: 0.5rem 0 0;
+  }
+}
+
 .valid-feedback {
   @include h5-bold;
   color: $brand-primary-500;
