A few more tweaks

--- a/angular/projects/design/src/styles/_forms.scss
+++ b/angular/projects/design/src/styles/_forms.scss
@@ -142,11 +142,11 @@ select:disabled {
 .form-field--plaintext {
   border: none;
   input {
-    margin: 0.5rem 0;
+    margin: 0.5rem 1rem;
   }
 
   label {
-    margin: 0.5rem 0 0;
+    margin: 0.5rem 1rem 0;
   }
 }
 
