Better URL handling

--- a/angular/projects/design/src/styles.scss
+++ b/angular/projects/design/src/styles.scss
@@ -49,6 +49,7 @@
 
 // Customized styles
 @import 'styles/root';
+@import 'styles/type';
 @import 'styles/buttons';
 @import 'styles/icons';
 @import 'styles/forms';
