--- a/angular/projects/design/src/styles/_type.scss
+++ b/angular/projects/design/src/styles/_type.scss
@@ -1,3 +1,15 @@
+.h2-bold {
+  @include h2-bold;
+}
+
 .h3-semibold {
   @include h3-semibold;
+}
+
+.h4-semibold {
+  @include h4-semibold;
+}
+
+.h5-bold {
+  @include h5-bold;
 }
