--- a/angular/projects/design/src/styles/_wizard.scss
+++ b/angular/projects/design/src/styles/_wizard.scss
@@ -128,6 +128,7 @@ body {
     color: $brand-primary-600;
     margin-left: 0.75rem;
     margin-right: 0.75rem;
+    text-decoration: none;
   }
 
   .btn {
