--- a/angular/projects/shared/src/lib/components/fields/text-field.component.html
+++ b/angular/projects/shared/src/lib/components/fields/text-field.component.html
@@ -3,12 +3,13 @@
   [class.form-field--editing]="isEditing"
   [class.form-field--focused]="isFocused"
   [class.form-field--invalid]="isInvalid"
+  [class.form-field--multiline]="rows > 1"
   [class.form-field--nonempty]="isNonEmpty"
   [class.form-field--plaintext]="isPlaintext"
   [class.form-field--unconfirmed]="isUnconfirmed"
   (click)="onClick($event)">
   <label [for]="derivedId">{{label}}</label>
-  <input #inputEl [type]="type" [id]="derivedId" [name]="derivedName"
+  <input *ngIf="rows == 1" #inputEl [type]="type" [id]="derivedId" [name]="derivedName"
     [placeholder]="placeholder || ''"
     [disabled]="isDisabled"
     [readonly]="!isFocusable || !isEditing"
@@ -16,6 +17,15 @@
     (focus)="onFocus($event)" (blur)="onBlur($event)"
     [shared-debounced]="debounceTime" (debouncedValueChange)="this.debouncedValueChange.emit($event)"
     [(ngModel)]="value" />
-</div>
+  <textarea *ngIf="rows > 1" #inputEl [id]="derivedId" [name]="derivedName"
+    [rows]="rows"
+    [placeholder]="placeholder || ''"
+    [disabled]="isDisabled"
+    [readonly]="!isFocusable || !isEditing"
+    [tabindex]="isFocusable && isEditing ? 0 : -1"
+    (focus)="onFocus($event)" (blur)="onBlur($event)"
+    [shared-debounced]="debounceTime" (debouncedValueChange)="this.debouncedValueChange.emit($event)"
+    [(ngModel)]="value"></textarea>
+  </div>
 <div class="invalid-feedback" *ngIf="errorMessage as msg">{{msg}}</div>
 <ng-template [ngTemplateOutlet]="template" [ngTemplateOutletContext]="{isEditing: isEditing, isFocusable: isFocusable, isFocused: isFocused, source: source, target: target}"></ng-template>
