Clean out old onboarding code

--- a/views/onboarding/index.ejs
+++ b/views/onboarding/index.ejs
@@ -1,4 +1,4 @@
-<%- contentFor('title') %>Sign Up
+<%- contentFor('title') %><%= __('onboarding.title') %>
 <%- contentFor('head') %>
 <base href="/sign-up">
 <script type="text/javascript">
