Add delays to prevent initial compilation failure, multiline field sample

--- a/angular/projects/design/src/app/inputs.component.html
+++ b/angular/projects/design/src/app/inputs.component.html
@@ -5,6 +5,9 @@
     <shared-text-field id="empty" label="Empty Field" placeholder="Sample Input" [source]="source" [target]="source"></shared-text-field>
   </div>
   <div class="mb-3">
+    <shared-text-field id="multiline" label="Multiline Field" placeholder="Sample Input" [rows]="4" [source]="source" [target]="source"></shared-text-field>
+  </div>
+  <div class="mb-3">
     <shared-text-field id="disabled" label="Disabled Field" [isDisabled]="true" placeholder="Sample Input" [source]="source"></shared-text-field>
   </div>
   <div class="mb-3">
