--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -1,8 +1,15 @@
-<%- contentFor('title') %>Admin
+<%- contentFor('title') %><%= __('admin.title') %>
+<%- contentFor('head') %>
+<base href="/admin">
+<script type="text/javascript">
+  window.env = {};
+  window.env.BASE_HOST = '<%= process.env.BASE_HOST %>';
+  window.env.MARKETING_ENABLED = '<%= process.env.MARKETING_ENABLED %>';
+</script>
 <%- contentFor('body') %>
-<app-admin>Loading...</app-admin>
-<% for (let entry of ['admin']) { %>
-  <% for (let chunk of webpackStats.chunks[entry]) { %>
-    <script type="application/javascript" src="<%= chunk.publicPath %>"></script>
+<app-root><%= __('common.pleaseWait') %></app-root>
+<% for (let asset of Object.keys(webpackStats.assets)) { %>
+  <% if (asset.endsWith('.js')) { %>
+    <script type="application/javascript" src="<%= webpackStats.assets[asset].publicPath %>" defer></script>
   <% } %>
 <% } %>
