--- a/views/admin/layout.ejs
+++ b/views/admin/layout.ejs
@@ -2,60 +2,29 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no">
+    <meta name="description" content="Peak Response is an MCI management system for EMS professionals.">
+    <meta name="author" content="Peak Response Inc.">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <title><%= locals.title ? `${title} - ` : '' %><%= process.env.APP_NAME %></title>
-    <link rel="stylesheet" href="/libraries/bootstrap/css/bootstrap.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/libraries/fontawesome/css/all.css" />
-    <link rel="stylesheet" href="/stylesheets/admin.css">
-    <base href="/admin/">
-    <script type="text/javascript">
-    window.env = {};
-    </script>
+    <% for (let asset of Object.keys(designWebpackStats.assets)) { %>
+      <% if (asset.endsWith('.css')) { %>
+        <link rel="stylesheet" href="<%= designWebpackStats.assets[asset].publicPath %>" />
+      <% } %>
+    <% } %>
+    <% for (let asset of Object.keys(webpackStats.assets)) { %>
+      <% if (asset.endsWith('.css')) { %>
+        <link rel="stylesheet" href="<%= webpackStats.assets[asset].publicPath %>" />
+      <% } %>
+    <% } %>
     <% if (locals.head) { %><%- head %><% } %>
   </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-      <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="/"><%= process.env.APP_NAME %></a>
-      <div class="collapse navbar-collapse justify-content-end">
-        <% if (currentUser) { %>
-          <% if (currentUser.iconUrl) { %><img class="navbar-icon rounded" src="<%= currentUser.iconUrl %>">&nbsp;<% } %>
-          <span class="navbar-text">Hello, <%= currentUser.firstName %>!</span>
-        <% } %>
-        <ul class="navbar-nav px-3">
-          <li class="nav-item text-nowrap">
-            <a class="nav-link" href="/admin">Admin</a>
-          </li>
-          <% if (currentUser) { %>
-            <li class="nav-item text-nowrap">
-              <a class="nav-link" href="/logout">Sign out</a>
-            </li>
-          <% } %>
-        </ul>
-      </div>
-    </nav>
-    <div class="container-fluid">
-      <% if (flash.info || flash.error) { %>
-        <div style="position: absolute; top: 0; right: 0;">
-          <% if (flash.info) { %>
-          <div class="toast" role="main">
-            <div class="toast-body">
-              <%= flash.info.join(' '); %>
-            </div>
-          </div>
-          <% } %>
-          <% if (flash.error) { %>
-          <div class="toast" role="main">
-            <div class="toast-body">
-              <%= flash.error.join(' '); %>
-            </div>
-          </div>
-          <% } %>
-        </div>
-        <script type="application/javascript">$('.toast').toast({delay: 2000}).toast('show');</script>
-      <% } %>
-      <%- body %>
-    </div>
+  <body<% if (locals.bodyClass) { %> class="<%= bodyClass %>"<% } %>>
+    <%- body %>
   </body>
 </html>
