--- a/angular/projects/admin/src/app/app.component.html
+++ b/angular/projects/admin/src/app/app.component.html
@@ -1,1 +1,10 @@
-<router-outlet></router-outlet>
+<nav class="sidebar">
+  <ul class="sidebar__nav">
+    <li>
+      <a routerLink="/users" routerLinkActive="sidebar__item--active" class="sidebar__item">Users</a>
+    </li>
+  </ul>
+</nav>
+<main>
+  <router-outlet></router-outlet>
+</main>
