--- a/angular/projects/admin/src/app/users/list-users.component.html
+++ b/angular/projects/admin/src/app/users/list-users.component.html
@@ -4,7 +4,7 @@
     <h1 class="h2">Users</h1>
   </div>
   <div class="table-responsive">
-    <table class="table table-striped table-sm">
+    <table class="table">
       <thead>
         <tr>
           <th>Last Name</th>
@@ -14,10 +14,10 @@
       </thead>
       <shared-list type="users">
         <ng-template let-record="record">
-          <tr>
-            <td><a [routerLink]="['/users', record.id]">{{record.lastName}}</a></td>
-            <td><a [routerLink]="['/users', record.id]">{{record.firstName}}</a></td>
-            <td><a [routerLink]="['/users', record.id]">{{record.email}}</a></td>
+          <tr [routerLink]="['/users', record.id]">
+            <td>{{record.lastName}}</td>
+            <td>{{record.firstName}}</td>
+            <td>{{record.email}}</td>
           </tr>
         </ng-template>
       </shared-list>
