--- a/angular/projects/design/src/styles/_sidebar.scss
+++ b/angular/projects/design/src/styles/_sidebar.scss
@@ -12,7 +12,7 @@
 
 .sidebar + main {
   margin-left: auto !important;
-  padding: 0 1.25rem;
+  padding: 0 $grid-gutter-width;
   width: calc(100% - 12.625rem);
 }
 
