--- a/angular/projects/design/src/styles/_variables.scss
+++ b/angular/projects/design/src/styles/_variables.scss
@@ -1,3 +1,5 @@
+$grid-gutter-width: 1.25rem;
+
 $font-family-sans-serif: 'Barlow', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', 'Liberation Sans',
   sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 $font-weight-semibold: 600;
@@ -52,6 +54,7 @@ $brand-secondaries: (
   '800': $brand-secondary-800,
 );
 
+$body-color: $base-800;
 $danger: $brand-secondary-500;
 
 $btn-border-radius: 0.5rem;
