--- a/angular/projects/design/src/styles/_variables.scss
+++ b/angular/projects/design/src/styles/_variables.scss
@@ -46,11 +46,13 @@ $brand-primaries: (
 $brand-secondary-300: #ffeddf;
 $brand-secondary-400: #fed2b1;
 $brand-secondary-500: #ee924f;
+$brand-secondary-600: #e7721d;
 $brand-secondary-800: #d7600a;
 $brand-secondaries: (
   '300': $brand-secondary-300,
   '400': $brand-secondary-400,
   '500': $brand-secondary-500,
+  '600': $brand-secondary-600,
   '800': $brand-secondary-800,
 );
 
