--- a/angular/projects/admin/src/app/users/edit-user.component.html
+++ b/angular/projects/admin/src/app/users/edit-user.component.html
@@ -1,29 +1,21 @@
-<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
   <h1 class="h2">Edit User</h1>
 </div>
 <shared-form *ngIf="id" type="users" [id]="id">
   <ng-template let-record="record" let-error="error">
-    <div class="form-group">
-      <label for="firstName">First Name</label>
-      <input [(ngModel)]="record.firstName" [class.is-invalid]="error.messages|error:'firstName'" type="text" class="form-control" id="firstName" name="firstName">
-      <div *ngIf="error.messages|error:'firstName'" class="invalid-feedback">{{(error.messages|error:'firstName').message}}</div>
+    <div class="mb-3">
+      <shared-text-field id="firstName" label="First Name" [source]="record" [target]="record" [error]="error"></shared-text-field>
     </div>
-    <div class="form-group">
-      <label for="lastName">Last Name</label>
-      <input [(ngModel)]="record.lastName" [class.is-invalid]="error.messages|error:'lastName'" type="text" class="form-control" id="lastName" name="lastName">
-      <div *ngIf="error.messages|error:'lastName'" class="invalid-feedback">{{(error.messages|error:'lastName').message}}</div>
+    <div class="mb-3">
+      <shared-text-field id="lastName" label="Last Name" [source]="record" [target]="record" [error]="error"></shared-text-field>
     </div>
-    <div class="form-group">
-      <label for="email">Email</label>
-      <input [(ngModel)]="record.email" [class.is-invalid]="error.messages|error:'email'" type="text" class="form-control" id="email" name="email">
-      <div *ngIf="error.messages|error:'email'" class="invalid-feedback">{{(error.messages|error:'email').message}}</div>
+    <div class="mb-3">
+      <shared-text-field id="email" label="Email" [source]="record" [target]="record" [error]="error"></shared-text-field>
     </div>
-    <div class="form-group">
-      <label for="email">Password</label>
-      <input [(ngModel)]="record.password" [class.is-invalid]="error.messages|error:'password'" type="password" class="form-control" id="password" name="password">
-      <div *ngIf="error.messages|error:'password'" class="invalid-feedback">{{(error.messages|error:'password').message}}</div>
+    <div class="mb-3">
+      <shared-text-field type="password" id="password" label="Password" [source]="record" [target]="record" [error]="error"></shared-text-field>
     </div>
-    <div class="form-group">
+    <div class="mb-3">
       <label for="Icon">Icon</label>
       <div *ngIf="icon && icon.dataURL" style="width: 200px;">
         <img [src]="icon.dataURL" class="img-fluid img-thumbnail mb-2" />
