--- a/angular/projects/shared/src/lib/components/form.component.html
+++ b/angular/projects/shared/src/lib/components/form.component.html
@@ -1,16 +1,18 @@
 <form #form="ngForm" (submit)="onSubmit()">
   <fieldset [disabled]="loading || disabled">
-    <div *ngIf="updated" class="alert alert-success">
-      This record has been updated!
-    </div>
     <shared-error *ngIf="error" [error]="error"></shared-error>
     <template [ngTemplateOutlet]="template" [ngTemplateOutletContext]="{record: record, error: error}"></template>
     <div *ngIf="!hideButtons && !loading" class="form-group d-flex justify-content-between">
-      <button [disabled]="!form.valid" type="submit" class="btn btn-primary">
-        <span *ngIf="!record.id">{{createLabel}}</span>
-        <span *ngIf="record.id">{{updateLabel}}</span>
-      </button>&nbsp;
-      <button (click)="deleteConfirmation.show()" type="button" *ngIf="record.id" class="btn btn-outline-danger">Delete</button>
+      <span>
+        <button [disabled]="!form.valid" type="submit" class="btn btn--primary">
+          <span *ngIf="!record.id">{{createLabel}}</span>
+          <span *ngIf="record.id">{{updateLabel}}</span>
+        </button>
+        <span *ngIf="updated" class="ms-3 valid-feedback">
+          This record has been updated!
+        </span>
+      </span>
+      <button (click)="deleteConfirmation.show()" type="button" *ngIf="record.id" class="btn btn--danger">Delete</button>
     </div>
   </fieldset>
 </form>
