Some modal styling

--- a/angular/projects/design/src/styles.scss
+++ b/angular/projects/design/src/styles.scss
@@ -54,6 +54,7 @@
 @import 'styles/icons';
 @import 'styles/forms';
 @import 'styles/links';
+@import 'styles/modal';
 @import 'styles/sidebar';
 @import 'styles/tables';
 @import 'styles/wizard';
