--- a/angular/projects/design/src/styles/_variables.scss
+++ b/angular/projects/design/src/styles/_variables.scss
@@ -99,3 +99,7 @@ $shadow-under: 0px 3px 6px rgba(98, 99, 99, 0.1);
 $shadow-minimal: 2px 3px 54px rgba(118, 140, 151, 0.1);
 $shadow-focused-recording: 0px 0px 0px 4px #fed2b1;
 $shadow-focused-editing: 0px 0px 0px 4px #d0e9f7;
+
+$modal-content-border-width: 0;
+$modal-content-border-radius: 1rem;
+$modal-content-box-shadow-xs: $shadow-10-15;
