--- a/angular/projects/shared/src/lib/components/modal.component.html
+++ b/angular/projects/shared/src/lib/components/modal.component.html
@@ -1,18 +1,18 @@
 <ng-template #content>
   <div class="modal-header">                      
     <ng-content select=".modal-title"></ng-content>
-    <button type="button" class="close" aria-label="Close" (click)="onDismiss()">
-      <i class="peakicon peakicon-remove"></i>
+    <button type="button" class="btn btn--sm" aria-label="Close" (click)="onDismiss()">
+      <i class="pr-icon pr-icon-24-exit"></i>
     </button>
   </div>
   <ng-content select=".modal-body"></ng-content>
   <div class="modal-footer">
     <div>
-      <button *ngIf="dismissLabel" ngbAutofocus type="button" class="btn btn-sm btn-outline-primary" (click)="onDismiss()">{{dismissLabel}}</button>
+      <button *ngIf="dismissLabel" ngbAutofocus type="button" class="btn btn--sm btn--secondary" (click)="onDismiss()">{{dismissLabel}}</button>
     </div>
     <div>
-      <button *ngIf="dangerLabel" ngbAutofocus type="button" class="btn btn-sm btn-primary" (click)="onDanger()">{{dangerLabel}}</button>
-      <button *ngIf="confirmLabel" ngbAutofocus type="button" class="btn btn-sm btn-primary" (click)="onConfirm()">{{confirmLabel}}</button>
+      <button *ngIf="dangerLabel" ngbAutofocus type="button" class="btn btn--sm btn--danger" (click)="onDanger()">{{dangerLabel}}</button>
+      <button *ngIf="confirmLabel" ngbAutofocus type="button" class="btn btn--sm btn--primary" (click)="onConfirm()">{{confirmLabel}}</button>
     </div>
   </div>
 </ng-template>
