--- a/angular/projects/design/src/app/inputs.component.html
+++ b/angular/projects/design/src/app/inputs.component.html
@@ -21,6 +21,12 @@
   </div>
 </section>
 <section>
+  <h2>File Field</h2>
+  <div class="mb-3">
+    <shared-file-field id="file" label="File Field" placeholder="Sample Input" [source]="source" [target]="source"></shared-file-field>
+  </div>
+</section>
+<section>
   <h2>Dropdowns</h2>
   <div class="mb-3">
     <shared-select-field id="dropdown" label="Dropdown" [source]="source" [target]="source">
