--- a/angular/projects/admin/src/app/users/list-users.component.html
+++ b/angular/projects/admin/src/app/users/list-users.component.html
@@ -2,6 +2,7 @@
 <div [class.d-none]="route.firstChild">
   <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
     <h1 class="h2">Users</h1>
+    <shared-search-field placeholder="Search" [debounceTime]="300" (debouncedValueChange)="onSearch($event)"></shared-search-field>
   </div>
   <div class="table-responsive">
     <table class="table">
@@ -12,7 +13,7 @@
           <th>Email</th>
         </tr>
       </thead>
-      <shared-list type="users">
+      <shared-list type="users" [search]="search">
         <ng-template let-record="record">
           <tr [routerLink]="['/users', record.id]">
             <td>{{record.lastName}}</td>
