--- a/angular/projects/design/src/styles.scss
+++ b/angular/projects/design/src/styles.scss
@@ -17,6 +17,7 @@
 @import '~bootstrap/scss/grid';
 // @import "~bootstrap/scss/tables";
 // @import "~bootstrap/scss/forms";
+@import '~bootstrap/scss/forms/form-check';
 // @import "~bootstrap/scss/buttons";
 // @import "~bootstrap/scss/transitions";
 // @import "~bootstrap/scss/dropdown";
