--- a/angular/projects/design/src/styles/_forms.scss
+++ b/angular/projects/design/src/styles/_forms.scss
@@ -1,6 +1,6 @@
 .form-field {
   background-color: white;
-  border: 2px solid $brand-primary-300;
+  border: 2px solid $base-500;
   border-radius: 0.5rem;
   display: flex;
   flex-direction: column;
@@ -48,6 +48,10 @@
   .form-field select {
     text-indent: -2px;
   }
+}
+
+.form-field--nonempty {
+  border-color: $brand-primary-300;
 }
 
 .form-field--search {
@@ -111,7 +115,7 @@
 
 .form-field--disabled,
 fieldset:disabled .form-field {
-  border-color: $base-500;
+  border-color: $base-300;
   &::after {
     display: none;
   }
@@ -171,4 +175,22 @@ select:disabled {
 .form-field .invalid-feedback,
 .form-field .valid-feedback {
   margin: 0 0.875rem 0.25rem;
+}
+
+.form-check {
+  @include h4-semibold;
+  margin-top: 0.375rem;
+}
+
+// shared-checkbox {
+//   @extend .form-check;
+// }
+
+.form-check-input {
+  background-size: auto;
+  margin-top: 0;
+}
+
+.form-check-label {
+  padding-top: 0.375rem;
 }
