--- a/angular/projects/design/src/styles/_variables.scss
+++ b/angular/projects/design/src/styles/_variables.scss
@@ -103,3 +103,17 @@ $shadow-focused-editing: 0px 0px 0px 4px #d0e9f7;
 $modal-content-border-width: 0;
 $modal-content-border-radius: 1rem;
 $modal-content-box-shadow-xs: $shadow-10-15;
+
+$form-check-input-width: 2.5rem;
+$form-check-min-height: 2.5rem;
+$form-check-padding-start: $form-check-input-width + 0.5rem;
+$form-check-margin-bottom: 0.5rem !default;
+$form-check-input-border: 0.125rem solid $base-500;
+$form-check-input-border-radius: 0.5rem;
+$form-check-input-focus-border: $brand-primary-500;
+
+$form-check-input-checked-color: $brand-primary-500;
+$form-check-input-checked-bg-color: white;
+$form-check-input-checked-border-color: $brand-primary-300;
+$form-check-input-checked-bg-image: url("data:image/svg+xml,%3Csvg width='26' height='26' viewBox='0 0 26 26' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='26' height='26' rx='4' fill='#{$form-check-input-checked-color}'/%3E%3C/svg%3E%0A");
+// $form-check-radio-checked-bg-image:       url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'><circle r='2' fill='#{$form-check-input-checked-color}'/></svg>") !default;
