--- a/angular/projects/shared/src/lib/components/fields/text-field.component.html
+++ b/angular/projects/shared/src/lib/components/fields/text-field.component.html
@@ -12,7 +12,7 @@
   <input *ngIf="rows == 1" #inputEl [type]="type" [id]="derivedId" [name]="derivedName"
     [placeholder]="placeholder || ''"
     [disabled]="isDisabled"
-    [readonly]="!isFocusable || !isEditing"
+    [readonly]="isReadOnly"
     [tabindex]="isFocusable && isEditing ? 0 : -1"
     (focus)="onFocus($event)" (blur)="onBlur($event)"
     [shared-debounced]="debounceTime" (debouncedValueChange)="this.debouncedValueChange.emit($event)"
