--- a/angular/projects/admin/src/app/app.component.html
+++ b/angular/projects/admin/src/app/app.component.html
@@ -1,6 +1,9 @@
 <nav class="sidebar">
   <ul class="sidebar__nav">
     <li>
+      <a routerLink="/facilities" routerLinkActive="sidebar__item--active" class="sidebar__item">Facilities</a>
+    </li>
+    <li>
       <a routerLink="/states" routerLinkActive="sidebar__item--active" class="sidebar__item">States</a>
     </li>
     <li>
