--- a/angular/projects/admin/src/app/app.component.html
+++ b/angular/projects/admin/src/app/app.component.html
@@ -41,6 +41,9 @@
       <a routerLink="/facilities" routerLinkActive="sidebar__item--active" class="sidebar__item">Facilities</a>
     </li>
     <li>
+      <a routerLink="/psaps" routerLinkActive="sidebar__item--active" class="sidebar__item">PSAPs</a>
+    </li>
+    <li>
       <a routerLink="/states" routerLinkActive="sidebar__item--active" class="sidebar__item">States</a>
     </li>
     <li>
