--- a/angular/projects/admin/src/app/psaps/edit-psap.component.html
+++ b/angular/projects/admin/src/app/psaps/edit-psap.component.html
@@ -1,14 +1,14 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
   <h1 class="h2" i18n>Edit State</h1>
 </div>
-<div class="d-block col-xl-6">
-  <ngb-alert *ngIf="isConfiguring" type="info" [dismissible]="false">
-    <div><shared-loader></shared-loader> {{status || 'Please wait...'}}</div>
-  </ngb-alert>
-  <ngb-alert *ngIf="isError" type="danger" [dismissible]="false">
-    <div>{{status}}</div>
-  </ngb-alert>
-  <shared-form #form *ngIf="id" type="states" [hideButtons]="true" [id]="id">
+<ngb-alert *ngIf="isConfiguring" type="info" [dismissible]="false">
+  <div><shared-loader></shared-loader> {{status || 'Please wait...'}}</div>
+</ngb-alert>
+<ngb-alert *ngIf="isError" type="danger" [dismissible]="false">
+  <div>{{status}}</div>
+</ngb-alert>
+<div class="row">
+  <shared-form #form *ngIf="id" type="states" [hideButtons]="true" [id]="id" class="col-md-3">
     <ng-template let-record="record" let-error="error">
       <fieldset [disabled]="isConfiguring">
         <div class="mb-3">
@@ -22,5 +22,5 @@
         </div>
       </fieldset>
     </ng-template>
-  </shared-form>  
+  </shared-form>
 </div>
